# carbonaegis-v2.0

./: .replit  Home.py  README.md  app.py  carbon_style_app.py  debug_app.py  init_db.py  project_dependencies.txt  pyproject.toml  requirements_streamlit.txt  simple_app.py  simple_cli.py  test_app.py
.streamlit/: config.toml
attached_assets/: GHG_emissions_calculator_ver01.1_web (1) (1).xlsx
pages/: 0_Onboarding.py  10_Survey_Dispatch.py  11_IoT_Integration.py  1_Data_Input.py  1_Data_Input_streamlit.py  1_Data_Input_streamlit_old.py  2_Dashboard.py  3_Report.py  4_Saved_Reports.py  5_Framework_Finder.py  6_ESG_Dashboard.py  7_ESG_Readiness.py  8_Team_Workspace.py  9_AI_Assistant.py
utils/: ai_assistant.py  ai_emission_mapper.py  calculation.py  calculations.py  data_import.py  data_manager.py  data_processing.py  database.py  report_generator.py  ui_components.py  visualization.py
