[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "numpy==1.26.3",
    "openai>=1.76.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.0",
    "sqlalchemy>=2.0.40",
    "streamlit==1.30.0",
    "trafilatura>=2.0.0",
    "typing-extensions>=4.13.2",
    "xlsxwriter>=3.2.3",
]
